--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -12,6 +12,9 @@ on:
         required: false
         default: 'main'
         type: string
+    secrets:
+      BUILDKITE_ANALYTICS_TOKEN:
+        required: true
 
 jobs:
   run-minitest:
@@ -65,4 +68,5 @@ jobs:
           RAILS_ENV: test
           GOVUK_CONTENT_SCHEMAS_PATH: vendor/publishing-api/content_schemas
           TEST_DATABASE_URL: ${{ steps.setup-mysql.outputs.db-url }}
+          BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }} 
         run: bundle exec rake test
