Remove remaining references to Whitehall Frontend
Whitehall existed in two modes: Whitehall Admin and Whitehall Frontend.

The frontend side has been switched off, therefore we can remove the
remaining references to it.

Note: the comment that has been removed from `SpecialistSectorHelper` is
no longer relevant (as the stubbing is now also used by Whitehall
Admin). Therefore the comment is being deleted but the code must be
kept.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whitehall",
-  "description": "Publishing and frontend rendering application for GOV.UK",
+  "description": "Publishing application for GOV.UK",
   "private": true,
   "author": "Government Digital Service",
   "license": "MIT",
