Update syntax to support bumped version of stylelint-config-gds - Ignore legacy files - Update syntax for double colon pseudo selectors - Ignore rules for media-feature-range syntax

--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,6 +1,7 @@
 extends: stylelint-config-gds/scss
 ignoreFiles:
   - app/assets/stylesheets/vendor/**/*
+  - app/assets/stylesheets/admin_legacy/**/*
 rules:
   # The styles here make rather liberal use of SASS nesting so this has been
   # disabled as it would be difficult to unpick.
