Add support for govspeak-editor to the translated_textarea component
There's some fields on the translation pages that use the govspeak editor.
This extends the translated textarea component to render the govspeak
editor in place of a normal textarea when required.

--- a/app/views/components/docs/translated_textarea.yml
+++ b/app/views/components/docs/translated_textarea.yml
@@ -39,5 +39,15 @@ examples:
       details:
         title: French translation
         text: Je suis en fait français.
+  with_govspeak_editor:
+    data:
+      textarea:
+        label:
+          text: Textarea (required)
+          heading_size: l
+        name: textarea
+      details:
+        text: This is the English translation
+      govspeak_editor: true
 
 
