Use prettier for Sass formatting
Follow govuk-frontend in the use of prettier for Sass stylesheets

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,5 @@
 app/assets/javascripts/vendor/
 app/assets/javascripts/admin_legacy
+app/assets/stylesheets/vendor/
+app/assets/stylesheets/admin_legacy
 spec/javascripts/admin_legacy
