Disable Rails/SaveBang cop
Update is used as variable in our Whats new view. I thought about updating
the variable name, but we shouldn't ever be saving or updating in
a view anyway.

--- a/.erb-lint.yml
+++ b/.erb-lint.yml
@@ -33,3 +33,5 @@ linters:
         Enabled: false
       Layout/FirstHashElementIndentation:
         Enabled: false
+      Rails/SaveBang:
+        Enabled: false
