Update WebMock config
The buildkite gem needs to send real requests to the API URI.
This commit allows a connection to be established with this
URI, so that data can be sent to it.

--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -68,5 +68,7 @@ jobs:
           RAILS_ENV: test
           GOVUK_CONTENT_SCHEMAS_PATH: vendor/publishing-api/content_schemas
           TEST_DATABASE_URL: ${{ steps.setup-mysql.outputs.db-url }}
-          BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }} 
-        run: bundle exec rake test
+          BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }}
+          CI: true
+        run: bundle exec rake test TEST=test/unit/app/helpers/admin
+
