Parallelise MiniTest workflow
This configures the MiniTest workflow to run
using a matrix strategy. It run separate parts
of the test suite on different nodes and hence
speeds up total run time of the CI/CD pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,10 @@ jobs:
   test-ruby:
     name: Test Ruby
     uses: ./.github/workflows/minitest.yml
+  
+  test-ruby-parallel:
+    name: Test Ruby
+    uses: ./.github/workflows/minitest-parallel.yml
 
   integration-tests-parallel:
     name: Integration tests
