Testing random assignment behaviour

--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -20,11 +20,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_test_paths: [
-          "test/unit/lib test/unit/app/helpers test/unit/app/presenters test/unit/app/validators test/unit/app/workers test/views",
-          "test/unit/app/models test/unit/app/services test/unit/app/uploaders test/unit/*_test.rb",
-          "test/functional test/components test/integration"
-        ]
+        ci_node_total: [4]
+        ci_node_index: [0, 1, 2, 3]
     steps:
       - name: Setup MySQL
         id: setup-mysql
@@ -68,9 +65,15 @@ jobs:
           TEST_DATABASE_URL: ${{ steps.setup-mysql.outputs.db-url }}
         run: bundle exec rails db:setup
 
+      - name: Make bin/minitest-ci executable
+        run: chmod +x ./bin/minitest-ci
+
       - name: Run Minitest
         env:
           RAILS_ENV: test
           GOVUK_CONTENT_SCHEMAS_PATH: vendor/publishing-api/content_schemas
           TEST_DATABASE_URL: ${{ steps.setup-mysql.outputs.db-url }}
-        run: bundle exec rails test ${{ matrix.node_test_paths }}
+          CI_NODE_TOTAL: ${{ matrix.ci_node_total }}
+          CI_NODE_INDEX: ${{ matrix.ci_node_index }}
+        run: |
+          ./bin/minitest-ci
