Prepare integration CI for matrix strategy
The matrix strategy has been tested on the codebase and
proved to work effectively. This commit prepares for full
adoption of the matrix strategy as the main strategy
for integration CI.

It also moves integration towards the same convention within
the ci.yml file - calling external workflows using `uses:...`
syntax, rather than having the full workflow definition in
ci.yml.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,9 @@ jobs:
     name: Test Ruby
     uses: ./.github/workflows/minitest.yml
 
-  integration-tests-parallel:
-    name: Integration tests
-    uses: ./.github/workflows/integration-tests-parallel.yml
+  test-features:
+    name: Test features
+    uses: ./.github/workflows/cucumber.yml
 
   integration-tests:
     name: Integration tests
