--- a/.github/workflows/cucumber.yml
+++ b/.github/workflows/cucumber.yml
@@ -1,10 +1,9 @@
-name: Run integration tests
+name: Run Cucumber
 
 on: workflow_call
 
 jobs:
-  run-parallel-integration-tests:
-    name: Run integration tests
+  feature-test-matrix:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -46,7 +45,7 @@ jobs:
         env:
           RAILS_ENV: test
           TEST_DATABASE_URL: ${{ steps.setup-mysql.outputs.db-url }}
-        run: bundle exec rails ${{ matrix.node_rake_task }}
+        run: bundle exec rake ${{ matrix.node_rake_task }}
 
       - name: Upload screenshots
         uses: actions/upload-artifact@v3
@@ -54,3 +53,10 @@ jobs:
         with:
           name: capybara-screenshots
           path: tmp/capybara/capybara-*.png
+
+  run-cucumber:
+    name: Run Cucumber
+    needs: feature-test-matrix
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "All feature tests have passed 🚀"
