--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -5,7 +5,7 @@ rerun_opts = rerun.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} fe
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} --strict --tags 'not @wip'"
 
 default_tags = "--tags 'not @design-system-only'"
-design_system_tags = "--tags 'not @bootstrap-only'"
+design_system_tags = "--tags 'not (@design-system-wip or @bootstrap-only)'"
 %>
 default: <%= std_opts %> <%= default_tags %> features --publish-quiet
 preview_design_system: <%= std_opts %> <%= design_system_tags %> CUCUMBER_PREVIEW_DESIGN_SYSTEM=true features --publish-quiet
