Remove Design System tag from cucumber tests
All templates and layout should be of new design system layout, so we don't need to support both versions of tests anymore

--- a/.github/workflows/cucumber.yml
+++ b/.github/workflows/cucumber.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_rake_task: ["cucumber:ok", "cucumber:preview_design_system"]
+        node_rake_task: ["cucumber:ok"]
     steps:
       - name: Setup MySQL
         id: setup-mysql
