Further accessibility improvements to secondary navigation usage
A recent accessibility audit of Whitehall returned a level A WCAG failure because navigation menus were labelled as "tabs" on some Whitehall pages. Elements labelled "tabs" should have tab-like behaviour, instead of menu link behaviour. We are therefore removing all mentions of "tabs" from secondary navigation aria labels.

--- a/app/views/components/docs/secondary_navigation.yml
+++ b/app/views/components/docs/secondary_navigation.yml
@@ -9,7 +9,7 @@ shared_accessibility_criteria:
 examples:
   default:
     data:
-      aria_label: Document tabs
+      aria_label: Document navigation
       items:
         - label: Document
           href: government/admin/editions/:id"
