--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "standard": "^17.1.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-gds": "^1.1.1"
+    "stylelint": "^16.0.0",
+    "stylelint-config-gds": "^2.0.0"
   },
   "resolutions": {
-    "stylelint/strip-ansi": "6.0.1",
-    "stylelint/string-width": "4.2.3"
+    "string-width": "4.2.3"
   }
 }
