Add a test for the autocomplete component
- also removes an option from the documentation for 'narrow' as this does not appear to be a valid option supported by the component, or called from anywhere in the app
- and add documentation and a test for passing data attributes

--- a/app/views/components/docs/autocomplete.yml
+++ b/app/views/components/docs/autocomplete.yml
@@ -90,21 +90,28 @@ examples:
             - fr
             - de
 
-  autocomplete_narrow_width:
+  with_data_attributes:
     data:
-      id: autocomplete-narrow
-      name: autocomplete-narrow
+      id: autocomplete
+      name: autocomplete
+      data_attributes:
+        module: not-a-module
+        loose: moose
       label:
-        text: Status
-      width: narrow
+        text: Select your country
       select:
         options:
           -
-            - Draft
+            -
           -
-            - Published
+            - France
+            - fr
           -
-            - Removed
+            - Germany
+            - de
+          -
+            - United Kingdom
+            - uk
 
   autocomplete_with_configuration_options:
     data:
