Fix datetime_fields component
- component guide was not rendering because not all examples included enough data for the component to render
- specifically, the components gem component date_input will only render custom day/month/year inputs if the data passed includes either a name or a label (and ideally a width)
- also modified the component so by default it doesn't try to pass [{}, {}, {}] as the items to the date_input
- also removing the documentation entry for start_year/end_year as it isn't in use and doesn't appear to do anything

--- a/app/views/components/docs/datetime_fields.yml
+++ b/app/views/components/docs/datetime_fields.yml
@@ -42,10 +42,16 @@ examples:
       field_name: first_published_at
       year:
         id: edition_first_published_year
+        name: Year
+        width: 4
       month:
         id: edition_first_published_month
+        name: Month
+        width: 2
       day:
         id: edition_first_published_day
+        name: Day
+        width: 2
       hour:
         id: edition_first_published_hour
       minute:
@@ -55,22 +61,21 @@ examples:
       prefix: edition
       field_name: first_published_at
       year:
+        name: Year
         value: 2022
+        width: 4
       month:
+        name: Month
         value: 1
+        width: 2
       day:
+        name: Day
         value: 1
+        width: 2
       hour:
         value: 9
       minute:
         value: 30
-  with_start_and_end_year:
-    data:
-      prefix: edition
-      field_name: first_published_at
-      year:
-        start_year: 2000
-        end_year: 2025
   with_error_items:
     data:
       prefix: edition
