--- a/app/views/components/docs/datetime_fields.yml
+++ b/app/views/components/docs/datetime_fields.yml
@@ -34,6 +34,7 @@ examples:
   with_hint_text:
     data:
       prefix: edition
+      field_name: first_published_at
       date_hint: For example, 01 August 2022
       time_hint: For example, 09:30 or 19:30
   with_custom_ids:
