Add test for image cropper component
- this is a bit of a placeholder as the component doesn't render in the component guide so I'm not sure how it's supposed to operate
- also had to add some accessibility criteria (again placeholder, need more detail) as this is a required field

--- a/app/views/components/docs/image_cropper.yml
+++ b/app/views/components/docs/image_cropper.yml
@@ -3,6 +3,10 @@ description: Displays an image with resizable crop function
 body: |
  This component uses Cropper.js - a JavaScript library for cropping image.
  Users can select an specific area of an image the image will then be cropped on browser-side and appended to the parent form on submission.
+accessibility_criteria: |
+  The component must:
+
+  - be usable with a keyboard
 examples:
   default:
     data:
