Add test for inset_prompt component
- update the component so that at least a title or description are required for something to render
- document undocumented `id` feature

--- a/app/views/components/docs/inset_prompt.yml
+++ b/app/views/components/docs/inset_prompt.yml
@@ -39,3 +39,8 @@ examples:
         tracking: GTM-123AB
       items:
       - text: Descriptive link to the question with an error 1
+  with_id_attribute:
+    data:
+      title: If you want an id on the component for some reason
+      id: myid
+
