Add feature flag for visual editor
Add flipflop feature flag for visual editor and use it to display a visual editor button on the govspeak editor on the edition edit page.

--- a/app/views/components/docs/govspeak_editor.yml
+++ b/app/views/components/docs/govspeak_editor.yml
@@ -80,3 +80,12 @@ examples:
         This is an attachment: !@1
 
         This is an image: !!1
+
+
+  with_visual_editor:
+    data:
+      label:
+        text: "Document content body"
+        bold: true
+      name: "with_visual_editor"
+      show_visual_editor: true
