--- a/.govuk_dependabot_merger.yml
+++ b/.govuk_dependabot_merger.yml
@@ -27,6 +27,7 @@ auto_merge:
   - dependency: govuk_publishing_components
     allowed_semver_bumps:
       - patch
+      - minor
   - dependency: govuk_schemas
     allowed_semver_bumps:
       - patch
