Include all tests and factories from lib/engines
To improve visibility, tests will be included in
their relevant pacakages, so we’ll need to ensure
all test-related files are included during the
test run

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,3 +43,8 @@ Style/OptionalBooleanParameter:
 Lint/MissingSuper:
   Exclude:
     - 'app/components/**/*.rb'
+    - 'lib/engines/**/app/components/**/*.rb'
+
+Rails/SaveBang:
+  Exclude:
+    - 'Rakefile'
