Add Packwerk to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
       security-events: write
       actions: read
 
+  packwerk-check:
+    name: Packwerk check
+    uses: ./.github/workflows/packwerk.yml
+
   lint-scss:
     name: Lint SCSS
     uses: ./.github/workflows/lintscss.yml
