Remove Ghostscript and PDF thumb generation.
gov-frontend no longer uses PDF thumbnails, so we can drop Ghostscript
etc.

For now, we keep the (probably disused) thumbnail_url field and use the
"fallback" icon for new PDFs. Can probably remove the field and the icon
altogether soon after.

--- a/.github/workflows/cucumber.yml
+++ b/.github/workflows/cucumber.yml
@@ -17,12 +17,10 @@ jobs:
       - name: Setup Redis
         uses: alphagov/govuk-infrastructure/.github/actions/setup-redis@main
 
-      - name: Install additional system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends ghostscript
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
