--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,6 +2,7 @@
 :concurrency: 8
 :queues:
   - scheduled_publishing
+  - content_block_publishing
   - default
   - publishing_api
   - asset_manager
