Rename "accessible-autocomplete" component to "accessible-autocomplete-multiselect"
Now that govuk_publishing_components has the "accessibile_autocomplete" as a dependancy it was clashing with our dependancy on our multiselect version.
This renaming ensures that the correct code is pulled into Whitehall.

--- a/app/views/components/docs/autocomplete.yml
+++ b/app/views/components/docs/autocomplete.yml
@@ -1,12 +1,12 @@
 name: Autocomplete
 description: An autocomplete component, built to be accessible
 body: |
-  This component is build using [Accessible Autocomplete](https://github.com/alphagov/accessible-autocomplete).
+  This component is build using [Accessible Autocomplete Multiselect](https://github.com/alphagov/accessible-autocomplete-multiselect).
 
   Typically it is used to enhance a select element with autocomplete options.
 part_of_admin_layout: true
 accessibility_criteria: |
-  [Accessibility acceptance criteria](https://github.com/alphagov/accessible-autocomplete/blob/master/accessibility-criteria.md)
+  [Accessibility acceptance criteria](https://github.com/alphagov/accessible-autocomplete-multiselect/blob/master/accessibility-criteria.md)
 examples:
   default:
     data:
