schedule draft Content Block Editions to be deleted
We don't currently have any UX for using Content
Blocks in a draft state, but they are
automatically created if a user hits 'save and
continue' on the new form page - this schedules a
Sidekiq job to delete any Blocks that are hanging
around from people abandoning the form without
pressing 'cancel' (e.g. by closing the browser
window) and that are older than two months (so we
avoid deleting any in progress blocks).

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -17,3 +17,5 @@
       class: CheckAllOrganisationsLinksWorker
     LinkCheckerDeleteOldDataWorker:
       cron: '30 3 * * *' # Runs at 3:30 a.m every day
+    DeleteDraftContentBlocksWorker:
+      cron: '0 3 * * *' # Runs at 3:00 a.m every day
