add class name for scheduling DeleteDraftContentBlocksWorker
I think that sidekiq couldn't find this worker without
specifying it's in the ContentBlockManager engine.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -19,3 +19,4 @@
       cron: '30 3 * * *' # Runs at 3:30 a.m every day
     DeleteDraftContentBlocksWorker:
       cron: '0 3 * * *' # Runs at 3:00 a.m every day
+      class: ContentBlockManager::DeleteDraftContentBlocksWorker
