--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,11 +34,11 @@ Style/HashEachMethods:
 Rails/LexicallyScopedActionFilter:
   Enabled: false
 
-# Sidekiq jobs don't support keyword arguments which make this cop hard
+# Sidekiq workers don't support keyword arguments which make this cop hard
 # to apply while maintaining backwards compatibility.
 Style/OptionalBooleanParameter:
   Exclude:
-    - 'app/sidekiq/*.rb'
+    - 'app/workers/*.rb'
 
 Lint/MissingSuper:
   Exclude:
