Add permitted_uses to image kind config
This means we don't have to hardcode the fact that only default images are allowed to be embedded in govspeak. If we later have other kinds of images which are allowed to be embedded in govspeak, that could be represented in config too.

The permitted_uses array could be used in future for other situations where only some kinds of images are allowed to be used in a particular circumstance - for example in featured images, lead images, person images, etc.

--- a/config/image_kinds.yml
+++ b/config/image_kinds.yml
@@ -3,6 +3,8 @@ default:
   display_name: "Default (960 by 640)"
   valid_width: 960
   valid_height: 640
+  permitted_uses:
+    - govspeak_embed
   versions:
     - name: s960
       width: 960
