--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   minitest-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
