Change the “can’t be blank” error suffix
GDS guidance is to avoid negative contractions like can’t and don’t.
From the [GDS Style guide][1]:

> Avoid negative contractions like can’t and don’t. Many users find them harder to read, or misread them as the opposite of what they say. Use cannot, instead of can’t.

[1]: https://www.gov.uk/guidance/style-guide/a-to-z#contractions

--- a/app/views/components/docs/single_image_upload.yml
+++ b/app/views/components/docs/single_image_upload.yml
@@ -36,7 +36,7 @@ examples:
       id: single-image-upload-with-error
       name: single-image-upload-with-error
       error_items:
-        - text: Image can't be blank
+        - text: Image cannot be blank
   with_image_uploaded:
     data:
       id: single-image-upload-with-image
