Add Kyrgyz to Whitehall
Trello: https://trello.com/c/T2neQSyf/3319-add-language-support-for-kyrgyz

--- a/config/languages.yml
+++ b/config/languages.yml
@@ -126,6 +126,10 @@ ko:
   direction: ltr
   english_name: Korean
   native_name: 한국어
+ky:
+  direction: ltr
+  english_name: Kyrgyz
+  native_name: Кыргызча
 lt:
   direction: ltr
   english_name: Lithuanian
